# homework_tp

./: .gitattributes  README.md
.github/workflows/: build-and-lint.yml  ruff.yml  run_test.yml
src/c_tasks/kontrol/: binary_count.c  fib.c  sort.c
src/c_tasks/kontrol2/: bin_cc.c  func_que.c
src/c_tasks/tasks10/bin_repr/: CMakeLists.txt  double_repr.c  double_repr.h  main.c  test.c
src/c_tasks/tasks10/doublemicro/: CMakeLists.txt  double_conv.c  double_conv.h  main.c  test.c
src/c_tasks/tasks2/: mnogochlen.c
src/c_tasks/tasks3/: CMakeLists.txt  brack.c  count_substr.c  countz.c
src/c_tasks/tasks4/: CMakeLists.txt  bubble_sort.c  bubble_sort.s  main.c  readme.md
src/c_tasks/tasks5/: brackets.c  sort_station.c  stack.c  stack.h
src/c_tasks/tasks6/: CMakeLists.txt  counter.c  main.c  sortedlist.c  sortedlist.h  test_sortedlist.c
src/c_tasks/tasks7/: CMakeLists.txt
src/python_tasks/py_kontrolwork2/: frozenmtx.py  pyproject.toml
src/python_tasks/py_kontrolwork2/oper_matrix/: __init__.py  matrix.py
src/python_tasks/task2/: advanced_euclid.py
src/python_tasks/task3/: sorting.py
src/python_tasks/task4/: brutf_queens.py  complexity.md  my_sol_queens.py  rec_queens.py
src/python_tasks/task5/: big_queens.py
src/python_tasks/task6/: heapsort.py  requirements.txt  sortings.py  test_heapsort.py
src/python_tasks/task7/: curry.py
src/python_tasks/task8/: haffman.py
src/python_tasks/task9/: graph.py
